@@ -1,5 +1,9 @@
 2001-03-03  Neil Booth  <neil@daikokuya.demon.co.uk>
 
+	* gcc.dg/cpp/macro7.c: New test.
+
+2001-03-03  Neil Booth  <neil@daikokuya.demon.co.uk>
+
 	* gcc.dg/cpp/multiline.c: Update.
 
 2001-03-03  Nathan Sidwell  <nathan@codesourcery.com>
